# bazbot

./: .env  .gitignore  Cargo.toml  README.md  convert_baz.sql
src/: ircconn.rs  lib.rs  main.rs  markov_words.rs  migration.rs
