[package]
name = "bazbot"
version = "0.3.0"
authors = ["Joel Roller <roller@gmail.com>"]
license = "CC0-1.0"
readme = "README.md"
edition = "2018"

[dependencies]
dotenv = "0.15"
rusqlite = "0.14"
clap = "2.33"
rand = "0.7"
log = "0.4"
env_logger = "0.7"
futures = "0.3.5"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.irc]
version = "0.14"
features = ["json"]

